Cleanup, removed Board class