@@ -1,20 +1,18 @@
 package TicTacToe3D.game.entity;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
-public enum Piece {
+public enum LocationState {
     RED,
     BLACK,
     WHITE,
     EMPTY;
 
-    private static final List<Piece> values = Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<LocationState> values = List.of(values());
     private static final Random random = new Random();
 
-    public static Piece randomPiece() {
+    public static LocationState randomPiece() {
         return values.get(random.nextInt(values.size()));
     }
 
